# ClientServer

./: .gitignore  CMakeLists.txt
src/Client/: CMakeLists.txt  Connection.cpp  Connection.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  NumbersGenerator.cpp  NumbersGenerator.h  main.cpp
src/Core/: CMakeLists.txt  Core.cpp  Core.h
src/Server/: CMakeLists.txt  ClientConnection.cpp  ClientConnection.h  Server.cpp  Server.h  main.cpp
