PROJECT(ClientServer)

CMAKE_MINIMUM_REQUIRED(VERSION 2.8.6)

SET(CMAKE_AUTOMOC ON)
SET(CMAKE_INCLUDE_CURRENT_DIR ON)

SET(CMAKE_CXX_FLAGS "-std=c++0x -Wall -Wextra")

INCLUDE_DIRECTORIES(
    ${CMAKE_CURRENT_BINARY_DIR}
)

ADD_SUBDIRECTORY(src/Core)
ADD_SUBDIRECTORY(src/Client)
ADD_SUBDIRECTORY(src/Server)
