SET(TARGET Core)

FIND_PACKAGE(Qt4 REQUIRED QtCore QtNetwork)
INCLUDE(${QT_USE_FILE})
ADD_DEFINITIONS(${QT_DEFINITIONS})

INCLUDE_DIRECTORIES(
    ${CMAKE_CURRENT_BINARY_DIR}
)

SET(SOURCES
    Core.cpp
)

SET(HEADERS
    Core.h
)

ADD_LIBRARY(
    ${TARGET}
    ${SOURCES}
    ${HEADERS}
)

TARGET_LINK_LIBRARIES(
    ${TARGET}
    ${QT_LIBRARIES}
)
